# pdm-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: agent_graph.md
k8s/: api-deployment.yaml  api-service.yaml  grafana-dashboard-json-configmap.yaml  grafana-dashboard-provider-configmap.yaml  grafana-datasource-configmap.yaml  grafana-deployment.yaml  grafana-pvc.yaml  grafana-secret.yaml  mlflow-deployment.yaml  mlflow-pvc.yaml  mlflow-service.yaml  namespace.yaml  postgres-configmap.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: pdm-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: check_api.py  drift_report.py  init-db.sql  seed_model.sh
src/pdm/agent/: agent.py  tools.py
src/pdm/api/: db.py  main.py  model.py  models_db.py  schemas.py
src/pdm/data/: preprocess.py
src/pdm/models/: cnn.py  models.py  register.py  train.py
