[project]
name = "pdm-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "mlflow>=3.1",
    "numpy>=2.5.0",
    "pandas>=2.2,<3",
    "protobuf<6",
    "sqlalchemy>=2.0.40",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdm"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-best-match"
