[project]
name = "pdm-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14",
    "evidently>=0.7.21",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "mlflow>=3.1",
    "numpy>=2.5.0",
    "openai>=2.43.0",
    "pandas>=2.2,<3",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "protobuf<6",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.40",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdm"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-best-match"
